--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Angust",
+  "name": "angust",
   "version": "0.0.1",
   "description": "Angust for manipulation with app state in Angular4+ apps",
   "homepage": "https://github.com/sash-ua/angust",
