--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "webpack:state": "webpack --watch --config ./webpack.config.state.js",
     "webpack:state:prod": "webpack --watch -p --config ./webpack.config.state.prod.js",
     "lite": "lite-server -o",
-    "map": "source-map-explorer dist/bundle.js",
+    "map": "source-map-explorer lib/angust.umd.js",
     "tsc": "tsc",
     "test:server": "http-server -p 3000 -c-1 --cors",
     "lite:dg": "lite-server -c bs-config-doc-gen.json"
@@ -49,28 +49,28 @@
     }
   ],
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "monad-ts": "^0.3.1"
+    "@angular/common": "^4.2.1",
+    "@angular/core": "^4.2.1",
+    "@angular/router": "^4.2.1",
+    "monad-ts": "^0.3.3"
   },
   "devDependencies": {
     "@types/async": "^2.0.40",
-    "@types/browser-sync": "^0.0.34",
+    "@types/browser-sync": "^0.0.35",
     "@types/core-js": "^0.9.41",
-    "@types/jasmine": "2.5.47",
-    "@types/node": "^7.0.12",
+    "@types/jasmine": "2.5.51",
+    "@types/node": "^7.0.29",
     "@types/rimraf": "0.0.28",
-    "async": "^2.3.0",
-    "awesome-typescript-loader": "^3.1.2",
-    "browser-sync": "^2.18.8",
+    "async": "^2.4.1",
+    "awesome-typescript-loader": "^3.1.3",
+    "browser-sync": "^2.18.12",
     "es6-shim": "^0.35.3",
-    "http-server": "^0.9.0",
+    "http-server": "^0.10.0",
     "isparta-loader": "^2.0.0",
-    "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^1.6.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "jasmine-core": "^2.6.3",
+    "jasmine-spec-reporter": "^4.1.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.1",
     "karma-htmlfile-reporter": "^0.3.5",
     "karma-jasmine": "^1.1.0",
@@ -79,10 +79,10 @@
     "lite-server": "^2.3.0",
     "npm-run-all": "^4.0.2",
     "source-map-explorer": "^1.3.3",
-    "source-map-support": "^0.4.14",
-    "ts-loader": "^2.0.3",
-    "ts-node": "^3.0.2",
-    "typescript": "^2.2.2",
-    "webpack": "^2.4.1"
+    "source-map-support": "^0.4.15",
+    "ts-loader": "^2.1.0",
+    "ts-node": "^3.0.6",
+    "typescript": "^2.3.4",
+    "webpack": "^2.6.1"
   }
 }
