--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angust",
-  "version": "0.0.5",
+  "version": "0.0.6-0",
   "description": "Angust for manipulation with app state in Angular4+ apps",
   "homepage": "https://github.com/sash-ua/angust",
   "repository": {
@@ -50,8 +50,7 @@
       "email": "tranchenkoa@gmail.com"
     }
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@angular/common": "^4.3.3",
     "@angular/core": "^4.3.3",
