--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
       "email": "tranchenkoa@gmail.com"
     }
   ],
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "@angular/common": "^4.3.3",
     "@angular/core": "^4.3.3",
@@ -77,7 +78,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "lite-server": "^2.3.0",
-    "monad-ts": "^0.3.7",
+    "monad-ts": "^0.3.10",
     "npm-run-all": "^4.0.2",
     "source-map-explorer": "^1.3.3",
     "source-map-support": "^0.4.15",
