--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "functional-js",
     "angular",
     "redux",
-    "flux",
+    "store",
     "angular4",
     "angular module"
   ],
@@ -50,40 +50,41 @@
       "email": "tranchenkoa@gmail.com"
     }
   ],
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@angular/common": "^4.3.3",
-    "@angular/core": "^4.3.3",
-    "@angular/router": "^4.3.3",
-    "@types/async": "^2.0.40",
-    "@types/browser-sync": "^0.0.35",
-    "@types/core-js": "^0.9.41",
-    "@types/jasmine": "2.5.51",
-    "@types/node": "^7.0.29",
-    "@types/rimraf": "0.0.28",
-    "async": "^2.4.1",
-    "awesome-typescript-loader": "^3.1.3",
-    "browser-sync": "^2.18.12",
+    "@angular/common": "^4.4.3",
+    "@angular/core": "^4.4.3",
+    "@angular/router": "^4.4.3",
+    "@types/async": "^2.0.42",
+    "@types/browser-sync": "^0.0.36",
+    "@types/core-js": "^0.9.43",
+    "@types/jasmine": "2.6.0",
+    "@types/node": "^8.0.30",
+    "@types/rimraf": "2.0.2",
+    "async": "^2.5.0",
+    "awesome-typescript-loader": "^3.2.3",
+    "browser-sync": "^2.18.13",
     "es6-shim": "^0.35.3",
     "http-server": "^0.10.0",
     "isparta-loader": "^2.0.0",
-    "jasmine-core": "^2.6.3",
-    "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-htmlfile-reporter": "^0.3.5",
     "karma-jasmine": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
+    "karma-webpack": "^2.0.4",
     "lite-server": "^2.3.0",
-    "monad-ts": "^0.3.10",
-    "npm-run-all": "^4.0.2",
-    "source-map-explorer": "^1.3.3",
-    "source-map-support": "^0.4.15",
-    "ts-loader": "^2.1.0",
-    "ts-node": "^3.0.6",
-    "typescript": "^2.4.2",
-    "webpack": "~2.7.0"
+    "monad-ts": "^0.3.11",
+    "npm-run-all": "^4.1.1",
+    "source-map-explorer": "^1.5.0",
+    "source-map-support": "^0.4.18",
+    "ts-loader": "^2.3.7",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.5.2",
+    "webpack": "~3.6.0"
   }
 }
